Add GraalPy as a fifth cross-library benchmark comparison point
Ports the jpype/jpy/jep/pyjnius call-overhead and array-transfer
benchmark suite to GraalPy (Truffle/Graal JIT, Java-hosts-Python
direction) to measure how much of jpype's overhead is dispatch cost a
JIT can buy back versus a structural gap it can't. GraalPy has no
buffer->array push path at any depth, so that gap is emulated by hand
(_arrayutil.py) and measured rather than skipped, per this comparison's
existing convention for documented library limitations.

Findings written up in RESULTS.md Section 10: GraalPy's JIT wins big on
hot monomorphic scalar/dispatch calls (2-3x ahead of jpy) and has a
simpler proxy/callback model than every other bridge here, but its
emulated bulk array transfer is ~5,100x slower than jpype's real fast
path and can exhaust a capped heap on row-heavy shapes that none of
jpype/jpy/jep/pyjnius even flinch at.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>